tests/sema/fail/v8_fail_print_no_args.ep
# COMPILE_FAIL: print expects 1 argument

fun run(): i64 {
    print()
    ret 0
}

fun main(): void {
    exit(run())
}
